# swift-haskell-tutorial

./: .gitignore  LICENSE  README.md  SwiftHaskellLibrary.cabal  link-deps.sh  stack.yaml  symlink_deps.sh
SwHaLib/include/: module.modulemap
SwiftAppLibrary/: AppDelegate.swift  Info.plist  SwiftAppLibrary.h  SwiftAppLibrary.m
SwiftAppLibrary/Base.lproj/: MainMenu.xib
SwiftHaskell/: AppDelegate.swift  Info.plist  SwiftHaskell-Bridging-Header.h
SwiftHaskell.xcodeproj/: project.pbxproj
SwiftHaskell/include/: Main_stub.h  module.modulemap
src/: Lib.hs  Main.hs
