name:                SwiftHaskellLibrary
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nanotech/swift-haskell-tutorial#readme
license:             BSD2
license-file:        LICENSE
author:              nanotech
maintainer:          nanotech@nanotechcorp.net
copyright:           2017 nanotech
-- category:
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -threaded -dynamic -shared -fPIC -o build/libswifthaskell.dylib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nanotech/swift-haskell-tutorial
