name:                SwiftHaskellLibrary
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nanotech/swift-haskell-tutorial#readme
license:             BSD2
license-file:        LICENSE
author:              nanotech
maintainer:          nanotech@nanotechcorp.net
copyright:           2017 nanotech
-- category:
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/nanotech/swift-haskell-tutorial

executable SwiftHaskell
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -framework-path build
  ld-options:          -rpath @executable_path/../Frameworks
  frameworks:          SwiftAppLibrary
  build-depends:       base >= 4.7 && < 5
